--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>"Parallax"</title>
-		<link rel="stylesheet" type="text/css" href="./styles.css"/>
+		<link rel="stylesheet" type="text/css" href="styles.css"/>
 	    <meta name="author" content="Jarom Vogel">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	</head>
@@ -13,5 +13,5 @@
 		</div>
 	</body>
 	<script type="text/javascript" src="./tween.js"></script>
-	<script type="text/javascript" src="./main.js"></script>
+	<script type="text/javascript" src="script.js"></script>
 </html>
